apps/base/oauth2-proxy/request-authentication.yaml
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: oauth2-gateway-jwt
  namespace: kube-system
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-gateway
  jwtRules:
    - issuer: https://login.ccsn.dev/oidc
      audiences:
        - m8rwqva1rsy9p2b3tbsad
      forwardOriginalToken: false
      fromHeaders:
        - name: X-OAuth2-Gateway-Id-Token
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: oauth2-gateway-jwt
  namespace: prod
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
  jwtRules:
    - issuer: https://login.ccsn.dev/oidc
      audiences:
        - m8rwqva1rsy9p2b3tbsad
      forwardOriginalToken: false
      fromHeaders:
        - name: X-OAuth2-Gateway-Id-Token
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: oauth2-gateway-jwt
  namespace: staging
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
  jwtRules:
    - issuer: https://login.ccsn.dev/oidc
      audiences:
        - m8rwqva1rsy9p2b3tbsad
      forwardOriginalToken: false
      fromHeaders:
        - name: X-OAuth2-Gateway-Id-Token
